--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
-TELEGRAM_TOKEN=8160765865:AAHeggi8mijflb944Hzk-qo1qAlUfC3hcKA
+TELEGRAM_TOKEN=your_token_here
+DEEPL_API_KEY=your_deepl_key_here  # Опционально
+DEFAULT_LANG=en
